<resources>
    <string name="app_name">ChessApp</string>
    <string name="AI">AI</string>
    <string name="Undo">Undo</string>
    <string name="Draw">Draw</string>
    <string name="Resign">Resign</string>
    <string name="Welcome">Welcome to the ChessApp! Press play to begin or long press a game to playback!</string>
    <string name="play">Play</string>
    <string name="playback">Playback</string>
    <string name="off">Sort Date</string>
    <string name="on">Sort Name</string>
    <string name="next">Next</string>
</resources>
