<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="project.chessapp.MainActivity">

    <GridView
        android:layout_width="match_parent"
        android:layout_height="2.25in"
        android:id="@+id/ChessGrid"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:numColumns="8"
        android:background="@color/colorPrimary" />

    <Button
        android:text="@string/AI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonAI"
        android:layout_marginEnd="18dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:elevation="0dp" />

    <Button
        android:text="@string/Undo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:id="@+id/buttonUndo"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/Draw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonUndo"
        android:layout_alignStart="@+id/buttonUndo"
        android:id="@+id/buttonDraw" />

    <Button
        android:text="@string/Resign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonResign"
        android:layout_above="@+id/buttonAI"
        android:layout_alignStart="@+id/buttonAI" />

    <TextView
        android:layout_width="0.5in"
        android:layout_height="0.25in"
        android:id="@+id/playerTurn"
        android:layout_marginBottom="26dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textStyle="normal|bold"
        android:textAlignment="center" />

</RelativeLayout>
