<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".HomeActivity">

    <ListView
        android:layout_width="match_parent"
        android:layout_height="2.15in"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/buttonPlayback"
        android:id="@+id/gameList"
        android:headerDividersEnabled="true"
        android:footerDividersEnabled="true"
        android:background="?attr/colorButtonNormal" />

    <TextView
        android:text="@string/Welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:id="@+id/textView"
        android:textStyle="normal|bold"
        android:textAlignment="center"
        android:textSize="18sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonPlay"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_marginStart="47dp" />

    <Button
        android:text="@string/playback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonPlayback"
        android:layout_below="@+id/textView"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="26dp" />
</RelativeLayout>
